tweak android setup desc

--- a/intro.html
+++ b/intro.html
@@ -892,7 +892,7 @@
                     <ul>
                         <li><strong>Use Chrome:</strong> open the app link in Chrome/Google for the smoothest setup.</li>
                         <li><strong>Enable Notifications:</strong> Allow notifications via popup.</li>
-                        <li><strong>Add to Home Screen:</strong> Share → “Add to Home Screen” for a more app-like experience (Needn't have to worry about recieving notifications... apple sucks).</li>
+                        <li><strong>Add to Home Screen:</strong> Settings (three dots): “Add to Home Screen” for a more app-like experience (Needn't have to worry about recieving notifications... apple sucks).</li>
                     </ul>
                 </section>
             </div>
