--- a/NotesHQ.html
+++ b/NotesHQ.html
@@ -66,6 +66,7 @@
                 var bg = (typeof theme.backgroundImage === 'string') ? theme.backgroundImage : '';
                 var fontFamily = (typeof theme.fontFamily === 'string') ? theme.fontFamily.trim() : '';
                 var boldText = (typeof theme.boldText === 'string') ? theme.boldText.trim() : '';
+                var bgVideo = (typeof theme.backgroundVideo === 'string') ? theme.backgroundVideo.trim() : '';
 
                 if (!accent || accent === 'null' || accent === 'undefined') accent = '';
                 if (!accentRgb || accentRgb === 'null' || accentRgb === 'undefined') accentRgb = '';
@@ -73,6 +74,24 @@
 
                 if (!fontFamily || fontFamily === 'null' || fontFamily === 'undefined') fontFamily = '';
                 if (!boldText || boldText === 'null' || boldText === 'undefined') boldText = '';
+                if (!bgVideo || bgVideo === 'null' || bgVideo === 'undefined') bgVideo = '';
+
+                if (!bgVideo) {
+                    try {
+                        var lastUid2 = (typeof sessionStorage !== 'undefined') ? sessionStorage.getItem('tmr_last_user_id') : null;
+                        if (lastUid2) {
+                            bgVideo = localStorage.getItem('tmr_user_' + lastUid2 + '_theme_bg_video') || '';
+                        }
+                        if (!bgVideo) bgVideo = localStorage.getItem('tmr_anon_theme_bg_video') || '';
+                        if (!bgVideo) bgVideo = localStorage.getItem('theme_bg_video') || '';
+                    } catch (_) {}
+                }
+                if (bgVideo) {
+                    try {
+                        root.classList.add('tmr-has-bg-video');
+                        root.classList.add('tmr-bg-video-loading');
+                    } catch (_) {}
+                }
 
                 if (fontFamily) {
                     root.style.setProperty('--font-family', fontFamily);
@@ -743,7 +762,9 @@
 
         function getAuthenticatedUserId() {
             try {
-                const uid = localStorage.getItem('tmr_last_user_id');
+                const uid =
+                    (typeof sessionStorage !== 'undefined' && sessionStorage.getItem('tmr_last_user_id')) ||
+                    localStorage.getItem('tmr_last_user_id');
                 return uid ? String(uid) : null;
             } catch { return null; }
         }
@@ -1024,7 +1045,7 @@
         }
 
         function loadCategories() {
-            fetch(`/notes/categories?userId=${encodeURIComponent(currentUser)}`)
+            fetch(`/notes/categories?userId=${encodeURIComponent(currentUser)}`, { credentials: 'include' })
                 .then(res => res.json())
                 .then(data => {
                     categories = data.categories || [];
@@ -1079,7 +1100,7 @@
 
         function loadNotes(categoryId) {
             console.log('[NotesHQ] Loading notes for categoryId:', categoryId);
-            fetch(`/notes/category/${categoryId}`)
+            fetch(`/notes/category/${categoryId}`, { credentials: 'include' })
                 .then(res => res.json())
                 .then(data => {
                     console.log('[NotesHQ] Loaded notes:', data);
@@ -1168,7 +1189,7 @@
         function deleteNote(noteId) {
             if (!confirm('Are you sure you want to delete this note?')) return;
 
-            fetch(`/notes/${noteId}`, { method: 'DELETE' })
+            fetch(`/notes/${noteId}`, { method: 'DELETE', credentials: 'include' })
                 .then(res => res.json())
                 .then(data => {
                     if (data.success) {
@@ -1204,6 +1225,7 @@
             fetch('/notes/category/create', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
+                credentials: 'include',
                 body: JSON.stringify({ userId: currentUser, categoryName: name })
             })
                 .then(res => res.json())
@@ -1335,6 +1357,7 @@
             fetch('/notes/create', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
+                credentials: 'include',
                 body: JSON.stringify({ userId: currentUser, categoryId: currentCategoryId, title, content: '' })
             })
                 .then(res => res.json())
@@ -1369,6 +1392,7 @@
             fetch('/notes/search', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
+                credentials: 'include',
                 body: JSON.stringify({ userId: currentUser, query, categoryId: null })
             })
                 .then(res => res.json())
