feat(mobile): add logout to More menu

--- a/TMR.html
+++ b/TMR.html
@@ -1678,6 +1678,7 @@
             <div class="tmr-menu-item"><span id="menu-username" style="padding: 0 8px; font-size: 14px; color: var(--accent-color, #0089f1);">Loading...</span></div>
             <div class="tmr-menu-item"><button id="menu-notes-btn" class="small-tmr-btn" tabindex="0">📝 Notes</button></div>
             <div class="tmr-menu-item"><button id="menu-themes-btn" class="small-tmr-btn" tabindex="0">🎨 Themes</button></div>
+            <div class="tmr-menu-item"><button id="menu-logout-btn" class="small-tmr-btn" tabindex="0" style="display:none;" title="Logout">🚪 Logout</button></div>
         </div>
 
         <!-- MEIBOT PANEL (RIGHT SIDE - Desktop only) -->
