feat(notify): add menu action to enable notifications

--- a/TMR.html
+++ b/TMR.html
@@ -1447,6 +1447,9 @@
             </label>
         </div>
         <div class="tmr-menu-item">
+            <button id="notify-open-onboard-btn" class="small-tmr-btn" type="button">Enable notifications…</button>
+        </div>
+        <div class="tmr-menu-item">
             <label for="notify-mode">Notification mode
                 <select id="notify-mode" style="margin-left:8px;">
                     <option value="both">Local + Server (default)</option>
