--- a/TMR.html
+++ b/TMR.html
@@ -235,12 +235,10 @@
 
             .todo-panel h3 {
                 margin: 0;
-                padding: 16px;
+                padding: 0;
                 font-size: 18px;
                 font-weight: 600;
-                background: var(--accent-color, #0089f1);
                 color: white;
-                border-radius: 12px 12px 0 0;
                 flex-shrink: 0;
             }
 
@@ -810,6 +808,12 @@
                 font-size: 20px;
                 font-weight: 700;
                 background: var(--accent-color, #0089f1);
+                background: color-mix(in srgb, var(--accent-color, #0089f1) 70%, transparent);
+                backdrop-filter: blur(20px) saturate(190%);
+                -webkit-backdrop-filter: blur(20px) saturate(190%);
+                position: relative;
+                overflow: hidden;
+                box-shadow: inset 0 1px 0 rgba(255,255,255,0.55), inset 0 -1px 0 rgba(255,255,255,0.22);
                 color: white;
                 flex-shrink: 0;
                 display: flex;
@@ -817,6 +821,24 @@
                 align-items: center;
                 border-radius: 16px 16px 0 0;
                 letter-spacing: 0.3px;
+            }
+
+            .meibot-header::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background:
+                    radial-gradient(120% 140% at 0% 0%, rgba(255,255,255,0.42), transparent 55%),
+                    radial-gradient(120% 140% at 100% 0%, rgba(255,255,255,0.34), transparent 55%),
+                    radial-gradient(140% 200% at 50% 120%, rgba(255,255,255,0.20), transparent 60%),
+                    linear-gradient(135deg, rgba(255,255,255,0.16), transparent 45%);
+                opacity: 0.98;
+                pointer-events: none;
+            }
+
+            .meibot-header > * {
+                position: relative;
+                z-index: 1;
             }
 
             .meibot-header h2 {
@@ -914,6 +936,32 @@
                 width: auto;
                 padding: 10px 14px;
                 white-space: nowrap;
+                background: var(--accent-color, #0089f1);
+                background: color-mix(in srgb, var(--accent-color, #0089f1) 70%, transparent);
+                backdrop-filter: blur(18px) saturate(190%);
+                -webkit-backdrop-filter: blur(18px) saturate(190%);
+                border: none;
+                color: white;
+                position: relative;
+                overflow: hidden;
+                box-shadow: inset 0 1px 0 rgba(255,255,255,0.55), inset 0 -1px 0 rgba(255,255,255,0.22), 0 2px 8px rgba(0,0,0,0.10);
+            }
+
+            #meibot-modal-form > button.small-tmr-btn::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background:
+                    radial-gradient(120% 140% at 0% 0%, rgba(255,255,255,0.42), transparent 55%),
+                    radial-gradient(120% 140% at 100% 0%, rgba(255,255,255,0.34), transparent 55%),
+                    linear-gradient(135deg, rgba(255,255,255,0.16), transparent 45%);
+                opacity: 0.98;
+                pointer-events: none;
+            }
+
+            #meibot-modal-form > button.small-tmr-btn > * {
+                position: relative;
+                z-index: 1;
             }
 
             #meibot-modal-input::placeholder {
@@ -1291,6 +1339,12 @@
                 font-size: 20px;
                 font-weight: 700;
                 background: var(--accent-color, #0089f1);
+                background: color-mix(in srgb, var(--accent-color, #0089f1) 70%, transparent);
+                backdrop-filter: blur(20px) saturate(190%);
+                -webkit-backdrop-filter: blur(20px) saturate(190%);
+                position: relative;
+                overflow: hidden;
+                box-shadow: inset 0 1px 0 rgba(255,255,255,0.55), inset 0 -1px 0 rgba(255,255,255,0.22);
                 color: white;
                 flex-shrink: 0;
                 display: flex;
@@ -1298,6 +1352,24 @@
                 align-items: center;
                 border-radius: 16px 16px 0 0;
                 letter-spacing: 0.3px;
+            }
+
+            .meibot-header::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background:
+                    radial-gradient(120% 140% at 0% 0%, rgba(255,255,255,0.42), transparent 55%),
+                    radial-gradient(120% 140% at 100% 0%, rgba(255,255,255,0.34), transparent 55%),
+                    radial-gradient(140% 200% at 50% 120%, rgba(255,255,255,0.20), transparent 60%),
+                    linear-gradient(135deg, rgba(255,255,255,0.16), transparent 45%);
+                opacity: 0.98;
+                pointer-events: none;
+            }
+
+            .meibot-header > * {
+                position: relative;
+                z-index: 1;
             }
 
             .meibot-header h2 {
@@ -1394,6 +1466,32 @@
                 width: auto;
                 padding: 10px 14px;
                 white-space: nowrap;
+                background: var(--accent-color, #0089f1);
+                background: color-mix(in srgb, var(--accent-color, #0089f1) 70%, transparent);
+                backdrop-filter: blur(18px) saturate(190%);
+                -webkit-backdrop-filter: blur(18px) saturate(190%);
+                border: none;
+                color: white;
+                position: relative;
+                overflow: hidden;
+                box-shadow: inset 0 1px 0 rgba(255,255,255,0.55), inset 0 -1px 0 rgba(255,255,255,0.22), 0 2px 8px rgba(0,0,0,0.10);
+            }
+
+            #meibot-modal-form > button.small-tmr-btn::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background:
+                    radial-gradient(120% 140% at 0% 0%, rgba(255,255,255,0.42), transparent 55%),
+                    radial-gradient(120% 140% at 100% 0%, rgba(255,255,255,0.34), transparent 55%),
+                    linear-gradient(135deg, rgba(255,255,255,0.16), transparent 45%);
+                opacity: 0.98;
+                pointer-events: none;
+            }
+
+            #meibot-modal-form > button.small-tmr-btn > * {
+                position: relative;
+                z-index: 1;
             }
 
             #meibot-modal-input::placeholder {
